k8s/kcm.obmondo.com/opendesk-essentials/ingressroutetcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: opendesk-traefik-proxy-tcp
spec:
  entryPoints: [websecure]
  routes:
    - match: HostSNIRegexp(`^.+\.opendesk\.kcm\.obmondo\.com$`)
      services:
        - name: nginx-ingress-nginx-controller
          namespace: nginx
          port: 443
  tls:
    passthrough: true
